rewrite url for github pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       overflow: hidden;
     }
   </style>
-  <script defer data-domain="ant.care" src="https://plausible.io/js/script.js"></script>
+  <!-- <script defer data-domain="ant.care" src="https://plausible.io/js/script.js"></script> -->
 </head>
 
 <body>
